--- a/src/popup.html
+++ b/src/popup.html
@@ -8,7 +8,7 @@
       body {
         font-family: Arial, sans-serif;
         padding: 20px;
-        min-width: 250px; /* Adjust as needed */
+        min-width: 250px;
         background-color: #f4f4f4;
         color: #333;
       }
@@ -17,7 +17,6 @@
         margin-bottom: 20px;
         color: #2c3e50;
       }
-      /* New style for the H2 title */
       h2 {
         font-size: 1.1em;
         margin-bottom: 15px;
