Added button for forced transliteration

--- a/src/popup.html
+++ b/src/popup.html
@@ -48,6 +48,13 @@
       button:hover {
         background-color: #45a049;
       }
+      #forceTransliterationButton {
+        /* New style for the force button */
+        background-color: #007bff; /* A different color for distinction */
+      }
+      #forceTransliterationButton:hover {
+        background-color: #0056b3;
+      }
       .status-message {
         margin-top: 15px;
         font-size: 0.9em;
@@ -170,6 +177,7 @@
     </div>
 
     <button id="saveButton">Save Settings</button>
+    <button id="forceTransliterationButton">Force Transliteration</button>
     <p id="statusMessage" class="status-message"></p>
 
     <script src="popup.js"></script>
