Set Dechifro's engine as Default

--- a/src/popup.html
+++ b/src/popup.html
@@ -171,8 +171,8 @@
       <span class="toggle-label">Enable Shavian Transliteration</span>
     </div>
     <select id="transliterationEngineSelect">
-      <option value="to-shavian">To-Shavian (Default)</option>
-      <option value="dechifro">Dechifro Engine</option>
+      <option value="dechifro">Dechifro Engine (Default)</option>
+      <option value="to-shavian">To-Shavian</option>
     </select>
     <select id="languageModeSelect">
       <option value="htmlLang">HTML <code>lang</code> Attribute</option>
