Made Sure to reference Readlex insted of dechifro

--- a/src/popup.html
+++ b/src/popup.html
@@ -171,7 +171,7 @@
       <span class="toggle-label">Enable Shavian Transliteration</span>
     </div>
     <select id="transliterationEngineSelect">
-      <option value="dechifro">Dechifro Engine (Default)</option>
+      <option value="readlexicon">Readlexicon Engine (Default)</option>
       <option value="to-shavian">To-Shavian</option>
     </select>
     <select id="languageModeSelect">
