--- a/src/popup.html
+++ b/src/popup.html
@@ -168,11 +168,11 @@
         <input type="checkbox" id="transliterationToggle" />
         <span class="big-slider round"></span>
       </label>
-      <span class="toggle-label">Enable Shavian Transliteration</span>
+      <span class="toggle-label">Transliteration Enabled</span>
     </div>
     <select id="transliterationEngineSelect">
-      <option value="readlexicon">Readlexicon Engine (Default)</option>
-      <option value="to-shavian">To-Shavian</option>
+      <option value="readlexicon">Shavian (Readlexicon)</option>
+      <option value="coming-soon" disabled>More script dictionaries coming soon</option>
     </select>
     <select id="languageModeSelect">
       <option value="htmlLang">HTML <code>lang</code> Attribute</option>
