Removing backup label brom README

--- a/src/popup.html
+++ b/src/popup.html
@@ -168,7 +168,7 @@
         <input type="checkbox" id="transliterationToggle" />
         <span class="big-slider round"></span>
       </label>
-      <span class="toggle-label">Transliteration Enabled</span>
+      <span class="toggle-label">Enable Transliteration</span>
     </div>
     <select id="transliterationEngineSelect">
       <option value="readlexicon">Shavian (Readlexicon)</option>
