--- a/src/popup.html
+++ b/src/popup.html
@@ -301,6 +301,7 @@
       <label class="select-label">Engine:</label>
       <select id="transliterationEngineSelect">
         <option value="readlexicon">Shavian (Readlexicon)</option>
+        <option value="english-to-ipa">IPA (International Phonetic Alphabet)</option>
         <option value="coming-soon" disabled>More coming soon...</option>
       </select>
     </div>
