Implemented per website on-off switch

--- a/src/popup.html
+++ b/src/popup.html
@@ -296,6 +296,15 @@
       </label>
     </div>
 
+    <!-- Per-site enable toggle -->
+    <div class="main-toggle">
+      <span class="toggle-label">Enable on this site</span>
+      <label class="main-switch">
+        <input type="checkbox" id="perSiteToggle" />
+        <span class="main-slider"></span>
+      </label>
+    </div>
+
     <!-- Engine selection -->
     <div class="select-group">
       <label class="select-label">Engine:</label>
